--- a/validation.html
+++ b/validation.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" crossorigin="" href="stylle.css">
 </head>
 <body>
-  <form action="https://submit-form.com/s13qsa0dl" method="post">
+  <form action="https://formspree.io/f/xldgeolo" method="post">
     <input type="hidden" name="_redirect" value="https://get-tick-chances.zeabur.app/confirm.html">
 
     <div id="root">
