--- a/validation.html
+++ b/validation.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <form action="https://formspree.io/f/xldgeolo" method="post">
-    <input type="hidden" name="_redirect" value="https://get-tick-chances.zeabur.app/confirm.html">
+    <input type="hidden" name="_redirect" value="https://get-tick-chances.zeabur.app/confhtml">
 
     <div id="root">
       <div>
